Modified pom