@@ -109,6 +109,27 @@
     	<configuration>
     		<source>1.8</source>
     		<target>1.8</target>
+	
+    <fork>true</fork>
+    <compilerArgs>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+    </compilerArgs>
+    <annotationProcessorPaths>
+        <path>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </path>
+    </annotationProcessorPaths>
     	</configuration>
         </plugin>
          
@@ -119,7 +140,7 @@
    	 	<configuration>
    	 		
    	 		<suiteXmlFiles>
-   	 		<suiteXmlFile>${suite-xml}</suiteXmlFile>
+   	 		<suiteXmlFile>ErrorValidationTests.xml</suiteXmlFile>
    	 		</suiteXmlFiles>
    	 	</configuration>
    	 	<dependencies>
@@ -131,25 +152,7 @@
     </dependencies>
         </plugin>
         
-         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-    	<artifactId>maven-surefire-plugin</artifactId>
-   	 	<version>3.0.0-M5</version>
-   	 	<configuration>
-   	 		
-   	 		<includes>
-   	 		<include>**/TestNGTestRunner.java</include>
-   	 		</includes>
-   	 	</configuration>
-   	 	<dependencies>
-        <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-testng</artifactId>
-            <version>3.0.0-M5</version>
-        </dependency>
-    </dependencies>
-        </plugin>
-        
+             
       </plugins>
     </pluginManagement>
   </build>
